# beam_solver

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
src/beam_solver/: __init__.py  __main__.py  app.py  appconfig.py
