[build-system]
requires = [ "setuptools>=60", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "beam_solver"
dynamic = ["version"]
dependencies = ["platformdirs"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "beam_solver.__version__"}
